# xampp-devenv-doc

./: .gitignore  .textlintrc.json  Dockerfile  Makefile  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  sample.txt
.devcontainer/: devcontainer.json
.gemini/: styleguide.md
.github/workflows/: makefile.yml
image/: Dockerfile
source/: conf.py  index.rst
source/_static/js/: open_links_new_tab.js
source/db/: init-with-sql.md
source/guide/: db-op.md  db.md  dir.md  howtowrite.md  index.rst  sample-code.md  setup.md
source/guide/src/: SAMPLE.sql.txt  index.php  list-tables.php
source/reset/: docker-desktop-update.md  index.rst  reset.md  windows-update.md
source/resources/: index.rst
source/structure/: containers.md  index.rst
source/trouble/: devcontainer_not_found.md  index.rst  missing_driver.md  python_version.md
source/trouble/src/: Pipfile  Pipfile.old
